Fixed padding issue for some dialogs on mobile devices

--- a/app/assets/stylesheets/mobile.css
+++ b/app/assets/stylesheets/mobile.css
@@ -49,7 +49,7 @@
 		margin: 0;
 	}
 
-	.box {
+	.help, .box {
 		margin: 0 8px;
 	}
 
